[project]
name = "rl-tsc-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Ilai Dabush",email = "ilai.dabush@gmail.com"},
    {name = "Moshe Butman", email = "moshe.butman@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sumo-rl (==1.4.5)",
    "stable-baselines3[extra] (>=2.0.0a9)",
    "libsumo (>=1.21.0,<2.0.0)",
    "ray (>=2.40.0,<3.0.0)",
    "ray[rllib] (>=2.40.0,<3.0.0)",
    "lz4 (>=4.3.3,<5.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "gymnasium (>=1.0.0,<2.0.0)",
    "pydantic (>=2.10.5,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
